configurando o kafka